--- a/client/styles.css
+++ b/client/styles.css
@@ -1,6 +1,3 @@
-.card {
-    background: beige;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    height: 400px;
-    width: 200px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
